crates/marain-core/tests/fixtures/errors/11_generics_lookalike.lat
functio f() dat Agmen<T> :
    dic "x".
